media/sonarr-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarr
    app.kubernetes.io/component: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/part-of: sonarr
  name: sonarr
  namespace: media
spec:
  host: sonarr-media.apps.homelab.csfreak.com
  port:
    targetPort: 8989-tcp
  to:
    kind: Service
    name: sonarr
    weight: 100
  wildcardPolicy: None
